--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Redirecting to https://example.com</title>
+    <title>Redirecting to https://krähenbeisser.de</title>
     <meta http-equiv="refresh" content="0; URL=https://xn--krhenbeisser-hcb.de">
   </head>
 
